@startuml
skinparam backgroundColor white
skinparam classFontSize 12
skinparam packageStyle rectangle

package "user-db" #ECECFF {
  class User {
    id: string
    email: string
    keycloakId: string
  }
}

package "content-db" #E8FFE8 {
  class Project {
    userId
  }
  class Skill {
    userId
  }
  class Experience {
    userId
  }
  class Education {
    userId
  }
  class Certification {
    userId
  }
}

package "application-db" #FFF5CC {
  class Application {
    candidateId
    cvVersionId
    jobOfferId
    status
  }
  class AppStatusHistory
}

package "workflow-db" #F0E6FF {
  class CVGenerationRun {
    userId
    jobDescription
    status
  }
  class AgentDocumentChunk {
    sourceId
    sourceType
  }
  class Agent
  class WorkflowProject
  class WorkflowSkill
}

package "job-offer-db" #FFE8CC {
  class JobOffer {
    descriptionVector
  }
  class JobSkill
}

package "cv-db" #CCF5F5 {
  class CV {
    userId
  }
  class CVVersion
  class CVSection
}

package "notification-db" #FFD6D6 {
  class Notification {
    userId
  }
  class Reminder {
    userId
  }
}

' === Relations ===

User --> Project : owns
User --> Skill : owns
User --> Experience : owns
User --> Education : owns
User --> Certification : owns

User --> Application : candidate
User --> CV : owns
User --> CVGenerationRun : initiates
User --> Notification : receives
User --> Reminder : scheduled

Application --> CVVersion : references
Application --> JobOffer : applies to
Application --> AppStatusHistory : tracks

CV --> CVVersion : has versions
CVVersion --> CVSection : sections

JobOffer --> JobSkill : requires

CVGenerationRun --> Agent : executes on
AgentDocumentChunk --> Agent : belongs to

WorkflowProject ..> Project : mirrors
WorkflowSkill ..> Skill : mirrors

@enduml
